styling responsive layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-  <header>
+  <header class="">
+    <div class="hamburger-menu">
+      <div class="hamburger-menu__line--top"></div>
+      <div class="hamburger-menu__line--middle"></div>
+      <div class="hamburger-menu__line--bottom"></div>
+    </div>
     <div class="container">
       <h1 class="logo">
         <a href="./index.html">
@@ -39,15 +44,17 @@
   </header>
 
   <div class="hero">
-    <div class="hero__img">
-      <img src="./src/assets/images/bicycle.svg" alt="Bicycle">
-    </div>
+    <div class="container">
+      <div class="hero__img">
+        <img src="./src/assets/images/bicycle.svg" alt="Bicycle">
+      </div>
 
-    <div class="hero__cont">
-      <h2 class="hero__cont-title">Book your bicycle at any where, any time</h2>
-      <p class="hero__cont-desc">Book your ride using our bicyc app, you can book your ride at any where, any time.
-        Hurry up! for more offers</p>
-      <button class="hero__cont-btn">BOOK NOW</button>
+      <div class="hero__cont">
+        <h2 class="hero__cont-title">Book your bicycle<span>at any where, any time</span></h2>
+        <p class="hero__cont-desc">Book your ride using our bicyc app, you can book your ride at any where, any time.
+          Hurry up! for more offers</p>
+        <button class="hero__cont-btn">BOOK NOW</button>
+      </div>
     </div>
   </div>
 
