--- a/index.html
+++ b/index.html
@@ -62,44 +62,55 @@
   <div class="modal">
     <div class="close-modal-btn"><i class="far fa-times-circle"></i></div>
     <div class="form__container">
-      <form action="./index.html" class="form">
+      <form action="./index.html" method="POST" id="form1" class="form signin-form">
         <h3 class="form__title">SIGNIN</h3>
-        <div class="form__group">
-          <label class="form__group-label" for="name"><i class="fas fa-user"></i></label>
-          <input class="form__group-input" type="text" id="name" placeholder="Username">
+        <div class="form__group form-group">
+          <label class="form__group-label" for="signin-name"><i class="fas fa-user"></i></label>
+          <input class="form__group-input form-control" type="text" id="signin-name" autocomplete="username"
+            placeholder="Username" required data-pristine-required-message="Please enter your name">
         </div>
 
         <div class="form__group">
-          <label class="form__group-label" for="password"><i class="fas fa-unlock-alt"></i></label>
-          <input class="form__group-input" type="password" id="password" placeholder="Your Password">
+          <label class="form__group-label" for="signin-password"><i class="fas fa-unlock-alt"></i></label>
+          <input class="form__group-input form-control" required type="password" id="signin-password"
+            autocomplete="new-password" placeholder="Your Password"
+            data-pristine-required-message="Password is not correct">
         </div>
         <button class="form__btn" type="submit">SUBMIT</button>
       </form>
 
-      <form action="./index.html" class="form">
+      <form action="./index.html" method="POST" id="form2" class="form signup-form">
         <h3 class="form__title">SIGNUP</h3>
-        <div class="form__group">
-          <label class="form__group-label" for="name"><i class="fas fa-user"></i></label>
-          <input class="form__group-input" type="text" id="name" placeholder="Username">
+        <div class="form__group form-group">
+          <label class="form__group-label" for="signup-name"><i class="fas fa-user"></i></label>
+          <input class="form__group-input form-control" type="text" id="signup-name" autocomplete="username"
+            placeholder="Username" required data-pristine-required-message="Please choose a username">
         </div>
 
-        <div class="form__group">
+        <div class="form__group form-group">
           <label class="form__group-label" for="email"><i class="fas fa-envelope"></i></label>
-          <input class="form__group-input" type="email" id="email" placeholder="Your Email">
+          <input class="form__group-input form-control" type="email" id="email" required autocomplete="username"
+            placeholder="Your Email">
         </div>
 
-        <div class="form__group">
-          <label class="form__group-label" for="password"><i class="fas fa-unlock-alt"></i></label>
-          <input class="form__group-input" type="password" id="password" placeholder="Your Password">
+        <div class="form__group form-group">
+          <label class="form__group-label" for="signup-password"><i class="fas fa-unlock-alt"></i></label>
+          <input class="form__group-input form-control" type="password" id="signup-password" autocomplete="new-password"
+            placeholder="Your Password" required data-pristine-required-message="Please choose a password"
+            data-pristine-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{8,}$/"
+            data-pristine-pattern-message="Minimum 8 characters, at least one uppercase letter, one lowercase letter and one number">
         </div>
 
-        <div class="form__group">
+        <div class="form__group form-group">
           <label class="form__group-label" for="verify-password"><i class="fas fa-unlock-alt"></i></label>
-          <input class="form__group-input" type="verify-password" id="password" placeholder="Verify Your Password">
+          <input class="form__group-input form-control" type="password" placeholder="Verify Your Password"
+            data-pristine-equals="#signup-password" autocomplete="new-password"
+            data-pristine-equals-message="Passwords don't match">
         </div>
 
-        <div class="form__group">
-          <input class="form__group-checkbox" type="checkbox">
+        <div class="form__group form-group">
+          <input class="form__group-checkbox form-control" id="ch1" name="future" type="checkbox" required
+            data-pristine-required-message="You must accept the terms and conditions">
           <span>Agree with the terms and conditions</span>
         </div>
         <button class="form__btn" type="submit">SUBMIT</button>
@@ -108,6 +119,7 @@
     </div>
   </div>
 
+  <script src="./src/assets/vendors/pristine.min.js"></script>
   <script src="./src/assets/js/main.js"></script>
 </body>
 
