Validation success styling

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="modal">
     <div class="close-modal-btn"><i class="far fa-times-circle"></i></div>
     <div class="form__container">
-      <form action="./index.html" method="POST" id="form1" class="form signin-form">
+      <form action="/" method="GET" id="form1" class="form signin-form">
         <h3 class="form__title">SIGNIN</h3>
         <div class="form__group form-group">
           <label class="form__group-label" for="signin-name"><i class="fas fa-user"></i></label>
@@ -79,7 +79,7 @@
         <button class="form__btn" type="submit">SUBMIT</button>
       </form>
 
-      <form action="./index.html" method="POST" id="form2" class="form signup-form">
+      <form action="/" method="GET" id="form2" class="form signup-form">
         <h3 class="form__title">SIGNUP</h3>
         <div class="form__group form-group">
           <label class="form__group-label" for="signup-name"><i class="fas fa-user"></i></label>
@@ -108,7 +108,7 @@
             data-pristine-equals-message="Passwords don't match">
         </div>
 
-        <div class="form__group form-group">
+        <div class="form__group form-group form-checkbox">
           <input class="form__group-checkbox form-control" id="ch1" name="future" type="checkbox" required
             data-pristine-required-message="You must accept the terms and conditions">
           <span>Agree with the terms and conditions</span>
